--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -68,6 +68,7 @@ section.li-section .li-side-image {
     display: flex;
     align-items: end;
     max-width: 40%;
+    height: 100%;
 }
 
 .li-side-image img {
