--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -183,3 +183,9 @@ div.hd-sign-out {
 .hd-work {
     border-left: 1px solid rgba(0, 0, 0, 0.08);
 }
+
+@media screen and (max-width: 550px) {
+    div.hd-sign-out {
+        top: -45px;
+    }
+}
